--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "index.js",
   "author": "tuevu",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^2.0.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
     "express": "^4.16.3",
@@ -16,6 +18,8 @@
     "express-session": "^1.15.6",
     "handlebars": "^4.0.11",
     "method-override": "^2.3.10",
-    "mongoose": "^5.0.17"
+    "mongoose": "^5.0.17",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
