--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "method-override": "^2.3.10",
     "mongoose": "^5.0.17",
     "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0",
     "passport-local": "^1.0.0"
   }
 }
