--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.15.6",
     "handlebars": "^4.0.11",
     "method-override": "^2.3.10",
+    "moment": "^2.22.2",
     "mongoose": "^5.0.17",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
