feat(bullet board): add  rss feeds

--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "handlebars": "^4.0.11",
+    "isotope-layout": "^3.0.6",
+    "lodash": "^4.17.10",
     "method-override": "^2.3.10",
     "moment": "^2.22.2",
     "mongoose": "^5.0.17",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "q": "^1.5.1",
+    "rss-parser": "^3.1.3",
+    "superagent": "^3.8.3"
   }
 }
