--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.22.2",
     "mongoose": "^5.0.17",
     "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "passport-google-oauth20": "^1.0.0",
     "passport-local": "^1.0.0",
     "q": "^1.5.1",
